client/src/App.css
.App, #description {
  margin: 10px;
}

.App-footer{
  background-color: #4183c4;
  min-height: 15vh;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
}

.App-menu {
  background-color: #4183c4;
}

#attribution-link, #title, #headlines-link, #sources-link, #search-link {
  color: white
}

#search, #recent-filters {
  text-align: center;
}

#headlines-list, #articles-list, #results-list, #sources-list {
  margin-left: 10px;
  margin-right: 10px;
}

#source-name {
  text-align: center;
  width: 100%;
}

a:visited {
  color: grey;
}

@media only screen and (max-width: 767px) {
  #title {
    display: none;
  }
}

